--- a/Mitosearch/views/ejs/about.ejs
+++ b/Mitosearch/views/ejs/about.ejs
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <p>MitoSearch</p>
+        <p>MitoSearch test</p>
         <ul id="nav">
             <li><a href="./">Top</a></li>
             <li class="disabled"><a href="#">About</a></li>
