--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -42,7 +42,7 @@
 
 <body>
     <header id="top-header">
-        <p>MitoSearch</p>
+        <p>MitoSearchtest</p>
         <p id="explain">We constructed MitoSearch, a fish species composition database, using 4355 sequence data of 12S ribosomal RNA genes obtained by amplifying eDNA (environmental DNA) with MiFish primers in order to understand fish species composition around the world.</p>
         <ul id="nav">
             <li class="disabled"><a href="./">Top</a></li>
