--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -164,3 +164,14 @@ button {
 #top-header #explain {
     font-size: 18px;
 }
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution :2dppx) {
+    .icon {
+        position: absolute;
+        background: #f5f5f5;
+        width: 100px;
+        height: 100px;
+        border: none;
+        border-radius: 5px;
+    }
+}
