--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -166,6 +166,12 @@ button {
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution :2dppx) {
+    button {
+        width: 8%;
+        margin-right: 1.5%;
+        font-size: 20px;
+    }
+
     .icon {
         position: absolute;
         background: #f5f5f5;
