--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -165,7 +165,7 @@ button {
     font-size: 18px;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution :2dppx) {
+@media (-webkit-min-device-pixel-ratio: 2) {
     .icon {
         position: absolute;
         background: #f5f5f5;
@@ -173,30 +173,5 @@ button {
         height: 90px;
         border: none;
         border-radius: 5px;
-    }
-    #help {
-        border-radius: 50%;
-        z-index: 500;
-    }
-
-    #expansion {
-        left: 35%;
-        z-index: 500;
-    }
-
-    #restore {
-        display: none;
-        left: 80%;
-        z-index: 500;
-    }
-
-    #alltime {
-        display: block;
-        left: 80%;
-    }
-
-    #monthly {
-        display: none;
-        left: 80%;
     }
 }
