--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -165,7 +165,7 @@ button {
     font-size: 18px;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-resolution :192dpi) {
     .icon {
         position: absolute;
         background: #f5f5f5;
