--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -67,11 +67,11 @@
         </div>
 
         <div>
-            <button class="icon round" id="help"><img src="img/help.png"></button>
-            <button class="icon square" id="expansion"><img src="img/expansion.png"></button>
-            <button class="icon round" id="restore"><img src="img/restore.png"></button>
-            <button class="icon round alltime" id="alltime"><img src="img/alltime.png"></button>
-            <button class="icon round monthly" id="monthly"><img src="img/monthly.png"></button>
+            <button class="icon" id="help"><img src="img/help.png"></button>
+            <button class="icon" id="expansion"><img src="img/expansion.png"></button>
+            <button class="icon" id="restore"><img src="img/restore.png"></button>
+            <button class="icon" id="alltime"><img src="img/alltime.png"></button>
+            <button class="icon" id="monthly"><img src="img/monthly.png"></button>
         </div>
         <div id="content" style="height: 75%; width: 100%;">
             <div id="map" style="height: 1000px; width: 40%;"></div>
