--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -165,7 +165,7 @@ button {
     font-size: 18px;
 }
 
-@media (min-resolution: 2ppx) {
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2ppx) {
     .icon {
         position: absolute;
         background: #f5f5f5;
@@ -174,5 +174,4 @@ button {
         border: none;
         border-radius: 5px;
     }
-
 }
