セレクトボックスのサイズ調整

--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -57,7 +57,7 @@
         </div>
         <div id="form">
             <form>
-                <select id="filter" class="test-select2" multiple="multiple">
+                <select id="filter" class="test-select2" multiple="multiple" style="height: 35px">
                   <% AllFishList.forEach(fishName => { %>
                     <option><%= fishName %></option>
                   <% }) %>
