--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -107,6 +107,15 @@ button {
     border-radius: 5px;
 }
 
+.icon2 {
+    background: #f5f5f5;
+    width: 35px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    float: right;
+}
+
 .icon:hover {
         background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
 }
@@ -130,12 +139,12 @@ button {
 
 #alltime {
     display: block;
-    left: 80%;
+    left: 95%;
 }
 
 #monthly {
     display: none;
-    left: 80%;
+    left: 95%;
 }
 
 
@@ -145,6 +154,11 @@ button {
 }
 
 #graph {
+    float: right;
+    z-index: 300;
+}
+
+#bargraph {
     float: right;
     z-index: 300;
 }
