--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -100,6 +100,9 @@
         let taxo =  <%-JSON.stringify(taxo)%>;
         const sampleLen = sampleDataSet.length;
         console.log(sampleLen);
+        var latitude = <%-JSON.stringify(latitude)%>;
+        var longitude = <%-JSON.stringify(longitude)%>;
+        var ratio = <%-JSON.stringify(ratio)%>;
         var map;
 
     </script>
