remove WithIcon.js files

--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -108,11 +108,10 @@
     </script>
     <script src="javascripts/drawSelectbox.js"></script>
     <script src="javascripts/drawPie.js"></script>
-    <script src="javascripts/drawLiddgeLineWithIcon.js"></script>
-    <!-- <script src="javascripts/showLegend.js"></script> -->
-    <script src="javascripts/showLegendWithIcon.js"></script>
+    <script src="javascripts/drawLiddgeLine.js"></script>
+    <script src="javascripts/showLegend.js"></script>
     <script src="javascripts/iconLocation.js"></script>
-    <script src="javascripts/changeSpecies"></script>
+    <!-- <script src="javascripts/changeSpecies"></script> -->
 </body>
 
 
