--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -84,6 +84,10 @@
             <button class="icon" id="help"><img src="img/help.png"></button>
             <button class="icon" id="expansion"><img src="img/expansion.png"></button>
             <button class="icon" id="restore"><img src="img/restore.png"></button>
+            <button class="iconPolygon" id="polygon">poly</button>
+            <button class="iconPolygon2off" id="undo" >cole</button>
+            <button class="iconPolygon2off" id="eraser" disabled="true">eras</button>
+            <button class="iconPolygon" id="tr">tr</button>
         </div>
         <div id="content" style="height: 75%; width: 100%;">
             <div id="map" style="height: 1000px; width: 40%;"></div>
@@ -112,6 +116,7 @@
     <script src="javascripts/showLegend.js"></script>
     <script src="javascripts/iconLocation.js"></script>
     <!-- <script src="javascripts/changeSpecies"></script> -->
+    <script src="javascripts/polygon.js"></script>
 </body>
 
 
