--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -133,6 +133,7 @@ img {
     height: 35px;
     border: none;
     border-radius: 5px;
+    z-index: 500;
 }
 
 .icon2 {
@@ -143,6 +144,42 @@ img {
     border-radius: 5px;
     float: right;
 }
+.iconPolygon {
+    position: absolute;
+    background: #f5f5f5;
+    width: 35px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    z-index: 500;
+}
+.iconPolygonoff {
+    position: absolute;
+    background: #f5f5f5;
+    width: 35px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    z-index: 500;
+}
+.iconPolygon2on {
+    position: absolute;
+    background: #f5f5f5;
+    width: 35px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    z-index: 500;
+}
+.iconPolygon2off {
+    position: absolute;
+    background: #f5f5f5;
+    width: 35px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    z-index: 500;
+}
 
 .icon:hover {
         background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
@@ -150,22 +187,30 @@ img {
 .icon2:hover {
     background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
 }
+.iconPolygon:hover{
+    background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
+}
+.iconPolygon2on:hover{
+    background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
+}
 
 #help {
     border-radius: 50%;
+}
 
-    z-index: 500;
+#polygon {
+
 }
 
 #expansion {
     left: 38%;
-    z-index: 500;
+
 }
 
 #restore {
     display: none;
     left: 95%;
-    z-index: 500;
+
 }
 
 #alltime {
