--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -16,6 +16,7 @@
 
     <!-- markerClusterGroup -->
     <script src="markerClusterGroup/dist/leaflet.markercluster.js"></script>
+    <script src="https://cdn.rawgit.com/hayeswise/Leaflet.PointInPolygon/v1.0.0/wise-leaflet-pip.js"></script>
     <link rel="stylesheet" href="markerClusterGroup/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="markerClusterGroup/dist/MarkerCluster.Default.css" />
 
@@ -76,18 +77,18 @@
                 </select>
                 <input id="button" type="button" value="Filter">
             </form>
-            <button class="icon2" id="alltime"><img src="img/alltime.png"></button>
-            <button class="icon2" id="monthly"><img src="img/monthly.png"></button>
+            <button title="Show the full period of records" class="icon2" id="alltime"><img src="img/alltime.png"></button>
+            <button title="Show recent records by month" class="icon2" id="monthly"><img src="img/monthly.png"></button>
         </div>
 
         <div>
-            <button class="icon" id="help"><img src="img/help.png"></button>
-            <button class="icon" id="expansion"><img src="img/expansion.png"></button>
-            <button class="icon" id="restore"><img src="img/restore.png"></button>
-            <button class="iconPolygon" id="polygon">poly</button>
-            <button class="iconPolygon2off" id="undo" >cole</button>
-            <button class="iconPolygon2off" id="eraser" disabled="true">eras</button>
-            <button class="iconPolygon" id="tr">tr</button>
+            <button title="Legend" class="icon" id="help"><img src="img/help.png"></button>
+            <button title="Map panel expansion" class="icon" id="expansion"><img src="img/expansion.png"></button>
+            <button title="Map panel restoration" class="icon" id="restore"><img src="img/restore.png"></button>
+
+            <button title="Selection of region with the points added on the map" class="iconPolygonoff" id="polygon" disabled="true"><img src="img/polygon.png"></button>
+            <button title="Reset of button status" class="iconPolygon2off" id="undo" disabled="true"><img src="img/reset.png"></button>
+            <button title="Vertex point addition" class="iconPolygon" id="point"><img src="img/marker.png"></button>
         </div>
         <div id="content" style="height: 75%; width: 100%;">
             <div id="map" style="height: 1000px; width: 40%;"></div>
@@ -112,11 +113,11 @@
     </script>
     <script src="javascripts/drawSelectbox.js"></script>
     <script src="javascripts/drawPie.js"></script>
+    <script src="javascripts/polygon.js"></script>
     <script src="javascripts/drawLiddgeLine.js"></script>
     <script src="javascripts/showLegend.js"></script>
     <script src="javascripts/iconLocation.js"></script>
     <!-- <script src="javascripts/changeSpecies"></script> -->
-    <script src="javascripts/polygon.js"></script>
 </body>
 
 
