add polygon with 2 buttons

--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -86,9 +86,9 @@
             <button title="Map panel expansion" class="icon" id="expansion"><img src="img/expansion.png"></button>
             <button title="Map panel restoration" class="icon" id="restore"><img src="img/restore.png"></button>
 
-            <button title="Selection of region with the points added on the map" class="iconPolygonoff" id="polygon" disabled="true"><img src="img/polygon.png"></button>
-            <button title="Reset of button status" class="iconPolygon2off" id="undo" disabled="true"><img src="img/reset.png"></button>
+            <button title="Reset of button status" class="iconPolygon2on" id="undo"><img src="img/reset.png"></button>
             <button title="Vertex point addition" class="iconPolygon" id="point"><img src="img/marker.png"></button>
+
         </div>
         <div id="content" style="height: 75%; width: 100%;">
             <div id="map" style="height: 1000px; width: 40%;"></div>
@@ -112,8 +112,8 @@
 
     </script>
     <script src="javascripts/drawSelectbox.js"></script>
-    <script src="javascripts/drawPie.js"></script>
     <script src="javascripts/polygon.js"></script>
+    <script src="javascripts/drawPie.js"></script>
     <script src="javascripts/drawLiddgeLine.js"></script>
     <script src="javascripts/showLegend.js"></script>
     <script src="javascripts/iconLocation.js"></script>
