time slider added-display problem during expansion

--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -105,9 +105,9 @@
         </div>
         <div id="content" style="height: 75%; width: 100%;">
             <div id="map" style="height: 1000px; width: 40%;"></div>
-            <p style="width: 60%; float:right; text-align: right;">Number of Samples</p>
+            <p style="width: 60%; float:right; text-align: right;" id="graphName">Number of Samples</p>
             <div id="bargraphAlltime" style="height: 100px; width: 60%;"></div>
-            <div class="parent" style="height: 60px;">
+            <div class="parent" id="sliderArea" style="height: 60px;">
                 <div class="son" id="slider"></div>
                 <span id="event-start"></span>
                 <span id="event-end"></span>
