--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -143,6 +143,15 @@ img {
     border-radius: 5px;
     float: right;
 }
+.icon3 {
+    position: absolute;
+    background: #f5f5f5;
+    width: 35px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    z-index: 300;
+}
 .iconPolygon {
     position: absolute;
     background: #f5f5f5;
@@ -196,6 +205,9 @@ img {
 .icon2:hover {
     background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
 }
+.icon3:hover {
+    background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
+}
 .iconPolygon:hover{
     background-image: linear-gradient(45deg, #9ebaff 0%, #9dffbf 100%);
 }
@@ -229,6 +241,16 @@ img {
     left: 95%;
 }
 
+#timeFilterOnBtn{
+    display: block;
+
+}
+
+#timeFilterOffBtn{
+    display: none;
+
+}
+
 #event-start {
     display: none;
 }
@@ -248,30 +270,40 @@ img {
 }
 
 #slider {
+    margin-right: 0px;
     float:right;
     z-index: 300;
-    margin-left: 250px;
     top: 40px;
+    
 }
-
 
 #lowerHandleNumber {
     float: left;
     z-index:300;
     font-size: small;
     color:#6e6e6e;
+    
+    
 }
 #upperHandleNumber {
     float: right;
     z-index: 300;
     font-size: small;
     color: #6e6e6e;
+    
 }
-
-
+.noUi-handle {
+    width: 10px !important;
+    right: -5px !important;
+}
+.noUi-handle:before{
+    display: none !important;
+}
+.noUi-handle::after{
+    display: none !important;
+}
 #bargraph {
-    margin-left: 250;
-    margin-bottom: 30;
+    margin-top: 15px;
     float: right;
     z-index: 300;
 }
@@ -304,5 +336,42 @@ img {
         height: 60px;
         border: none;
         border-radius: 5px;
+        z-index: 500;
+    }
+    .icon2 {
+        position: absolute;
+        background: #f5f5f5;
+        width: 60px;
+        height: 60px;
+        border: none;
+        border-radius: 5px;
+        z-index: 300;
+    }
+    .icon3 {
+        position: absolute;
+        background: #f5f5f5;
+        width: 60px;
+        height: 60px;
+        border: none;
+        border-radius: 5px;
+        z-index: 300;
+    }
+    .iconPolygon2on {
+        position: absolute;
+        background: #f5f5f5;
+        width: 60px;
+        height: 60px;
+        border: none;
+        border-radius: 5px;
+        z-index: 500;
+    }
+    .iconPolygon2off {
+        position: absolute;
+        background: #d9d8d8;
+        width: 60px;
+        height: 60px;
+        border: none;
+        border-radius: 5px;
+        z-index: 500;
     }
 }
