--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -53,6 +53,7 @@ main {
     width: 100%;
     height: 15%;
     margin-bottom: 0.5%;
+    z-index: 300;
 }
 
 select {
@@ -144,13 +145,13 @@ img {
     float: right;
 }
 .icon3 {
-    position: absolute;
     background: #f5f5f5;
     width: 35px;
     height: 35px;
     border: none;
     border-radius: 5px;
     z-index: 300;
+    float: right;
 }
 .iconPolygon {
     position: absolute;
@@ -233,12 +234,12 @@ img {
 
 #alltime {
     display: block;
-    left: 95%;
+    
 }
 
 #monthly {
     display: none;
-    left: 95%;
+    
 }
 
 #timeFilterOnBtn{
@@ -267,6 +268,13 @@ img {
 #graph {
     float: right;
     z-index: 300;
+}
+#graphName {
+    position: absolute;
+    writing-mode: vertical-rl;
+    z-index:300;
+    top: 350px;
+    left: 50%;
 }
 
 #slider {
