fix the function of time filter

--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -87,10 +87,10 @@
                   <% }) %>
                 </select>
                 <input id="button" type="button" value="Filter">
-                <button title="Turn on the time filter" class="icon3" id="timeFilterOnBtn"><img src="img/timeFilterOn.png"></button>
-                <button title="Turn off the time filter" class="icon3" id="timeFilterOffBtn"><img src="img/timeFilterOff.png"></button>
-                <button title="Show the full period of records" class="icon2" id="alltime"><img src="img/alltime.png"></button>
-                <button title="Show recent records by month" class="icon2" id="monthly"><img src="img/monthly.png"></button> 
+                <button title="Turn on the time filter" class="icon3" id="timeFilterOnBtn" type="button"><img src="img/timeFilterOn.png"></button>
+                <button title="Turn off the time filter" class="icon3" id="timeFilterOffBtn" type="button"><img src="img/timeFilterOff.png"></button>
+                <button title="Show the full period of records" class="icon2" id="alltime" type="button"><img src="img/alltime.png"></button>
+                <button title="Show recent records by month" class="icon2" id="monthly" type="button"><img src="img/monthly.png"></button> 
             </form>
            
 
