--- a/Mitosearch/views/ejs/about.ejs
+++ b/Mitosearch/views/ejs/about.ejs
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-
+<% if (language === "zh"){ %>
+    <% console.log("index.js language=Chinese  "+language) %>
+    <html lang="zh-CN">
+<% } else if (language ==="ja"){ %>
+    <% console.log("index.js language=Japanese  "+language) %>
+    <html lang="ja">
+<% } else { %>
+    <% console.log("index.js language=English  "+language) %>
+    <html lang="en">
+<% } %>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -22,26 +31,26 @@
     <header>
         <p>MitoSearch</p>
         <ul id="nav">
-            <li><a href="./">Top</a></li>
-            <li class="disabled"><a href="#">About</a></li>
+            <li><a href="./"><%= __('Top') %></a></li>
+            <li class="disabled"><a href="#"><%= __('About') %></a></li>
             <li></li>
         </ul>
     </header>
 
     <main>
         <div class="about-main">
-            <p><%= __('We constructed MitoSearch, a fish species composition database, using 4355 sequence data of 12S ribosomal RNA genes obtained by amplifying eDNA (environmental DNA) with MiFish primers in order to understand fish species composition around the world.') %></p>
+            <p><%= __('MainTitle') %></p>
             
-            <h1><%= __('Overview of MitoSearch') %></h1>
+            <h1><%= __('headline') %></h1>
 
             <ol>
-                <li><%= __('The fish species composition of each eDNA sample is displayed as a pie chart at the sampling point on the map.') %></li>
+                <li><%= __('helpingParagraph1') %></li>
                 <img src="img/tooltip.png" style="height: 80%; width: 80%;">
-                <li><%= __('Display a composition pie chart that merges samples that are geographically close by shrinking the map.') %></li>
+                <li><%= __('helpingParagraph2') %></li>
                 <img src="img/cluster.png" style="height: 80%; width: 80%;">
-                <li><%= __('By dragging or zooming the map, the time transition of the composition of fish species in the map area is displayed as a ledger line.') %></li>
+                <li><%= __('helpingParagraph3') %></li>
                 <img src="img/riddge.png" style="height: 80%; width: 80%;">
-                <li><%= __('You can display a composition pie chart or ridge line by filtering by specific fish species (enter the fish species name in the text box and click "Filter").') %></li>
+                <li><%= __('helpingParagraph4') %></li>
                 <img src="img/filtering.png" style="height: 80%; width: 80%;">
             </ol>
 
