--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -252,6 +252,20 @@ img {
 
 }
 
+#lowerHandleNumberDatePicker{
+    width: 100px;
+    height: auto;
+    font-size: smaller;
+    float: left;
+}
+
+#upperHandleNumberDatePicker{
+    width: 100px;
+    height: auto;
+    font-size: smaller;
+    float: right;
+}
+
 #event-start {
     display: none;
 }
