--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -138,7 +138,9 @@
                 <span id="event-start"></span>
                 <span id="event-end"></span>
                 <div id="lowerHandleNumber" class="handleNumber"></div>
+                <input type="date" id="lowerHandleNumberDatePicker" name="lowerHandleNumberDatePicker">
                 <div id="upperHandleNumber" class="handleNumber"></div>
+                <input type="date" id="upperHandleNumberDatePicker" name="upperHandleNumberDatePicker">
             </div>
             <div id="bargraph" style="height: 80px; width: 60%;"></div>
             <div id="graph" style="height: 700px; width: 60%;"></div>
