--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -15,6 +15,7 @@
     <meta name="google-site-verification" content="99fifQZxW5GTQS0H1k0Pqa0hO9tvWhuBFxvjhC1z1qg" />
 
     <title>MitoSearch</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href='stylesheets/main.css'>
     <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css">
 
@@ -75,7 +76,10 @@
 
 <body>
     <header id="top-header">
-        <p>MitoSearch</p>
+        <img src="img/logoLarge.png" id="headlogo" style="height: auto; width: 10%;">
+        <p id="headtitle">MitoSearch</p>
+
+        
         <p id="explain"><%= __('MainTitle') %></p>
         <ul id="nav">
             <li class="disabled"><a href="./"><%= __('Top') %></a></li>
