--- a/Mitosearch/public/stylesheets/main.css
+++ b/Mitosearch/public/stylesheets/main.css
@@ -4,12 +4,22 @@ body {
     background: #f3f3f3;
 }
 
+
 header {
     background: #afafb0;
     margin: 0;
     padding: 1%;
     font-size: 40px;
     padding-right: 30%;
+}
+#headlogo, #headtitle{
+    display: inline;
+}
+#headtitle{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 5px;
+    font-weight: 400;
+    text-shadow:1px 1px 2px #5a5959;
 }
 
 #nav {
