add logo to about page

--- a/Mitosearch/views/ejs/about.ejs
+++ b/Mitosearch/views/ejs/about.ejs
@@ -29,7 +29,9 @@
 </head>
 <body>
     <header>
-        <p>MitoSearch</p>
+        <img src="img/logoLarge.png" id="headlogo" style="height: auto; width: 10%;">
+        <p id="headtitle">MitoSearch</p>
+        <p> </p>
         <ul id="nav">
             <li><a href="./"><%= __('Top') %></a></li>
             <li class="disabled"><a href="#"><%= __('About') %></a></li>
