--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -55,6 +55,8 @@
         <script src="select2/dist/js/i18n/en.js"></script>
     <% } %>
      
+    <!-- Common script of MitoSearch -->
+    <script src="javascripts/commonMito.js"></script>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
