--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -136,8 +136,8 @@
          
         </div>
         <div id="content" style="height: 75%; width: 100%;">
-            <div id="map" style="height: 1000px; width: 40%;"></div>
-            <div id="mapTest" style="height: 1000px; width: 40%;"></div>
+            <div id="map" style="height: 1000px; width: 80%;"></div>
+            <!-- <div id="mapTest" style="height: 1000px; width: 40%;"></div> -->
             <div id="bargraphAlltime" style="height: 100px; width: 60%;"></div>
             <div class="parent" id="sliderArea" style="height: 60px;">
                 <div class="son" id="slider"></div>
@@ -176,7 +176,6 @@
     <script src="javascripts/timePicker.js"></script>
     <script src="javascripts/drawSelectbox.js"></script>
     <script src="javascripts/polygon.js"></script>
-    <script src="javascripts/testPieEDITING.js"></script> 
     <!-- <script src="javascripts/drawPieLayered.js"></script> -->
     <script src="javascripts/drawPie.js"></script>
     <script src="javascripts/showLegend.js"></script>
