--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -56,7 +56,7 @@
     <% } %>
      
     <!-- Common script of MitoSearch -->
-    <script src="javascripts/commonMito.js"></script>
+    <!-- <script src="javascripts/commonMito.js"></script> -->
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -166,22 +166,23 @@
         var latitude = <%-JSON.stringify(latitude)%>;
         var longitude = <%-JSON.stringify(longitude)%>;
         var ratio = <%-JSON.stringify(ratio)%>;
-        var map;
-        var isMove = false;
+        //var map;
+        //var isMove = false;
         var language = <%-JSON.stringify(language)%>;
     </script>
     <script>
-        var sliderStatusChecker = "non-exist";
+        //var sliderStatusChecker = "non-exist";
     </script>
-    <script src="javascripts/timePicker.js"></script>
-    <script src="javascripts/drawSelectbox.js"></script>
-    <script src="javascripts/polygon.js"></script>
+    <script src="javascripts/mitosearch.js"></script>
+    <!-- <script src="javascripts/timePicker.js"></script> -->
+    <!-- <script src="javascripts/drawSelectbox.js"></script> -->
+    <!-- <script src="javascripts/polygon.js"></script> -->
     <!-- <script src="javascripts/drawPieLayered.js"></script> -->
-    <script src="javascripts/drawPie.js"></script>
-    <script src="javascripts/showLegend.js"></script>
-    <script src="javascripts/drawLiddgeLine.js"></script>
-    <script src="javascripts/iconLocation.js"></script>
-    <script src="javascripts/timechange.js"></script>
+    <!-- <script src="javascripts/drawPie.js"></script> -->
+    <!-- <script src="javascripts/showLegend.js"></script> -->
+    <!-- <script src="javascripts/drawLiddgeLine.js"></script> -->
+    <!-- <script src="javascripts/iconLocation.js"></script> -->
+    <!-- <script src="javascripts/timechange.js"></script> -->
     
 </body>
 
