DecimalからBigNumberへ変更

--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -27,6 +27,7 @@
     <script src="wnumb-1.2.0/wNumb.js"></script>
 
     <script src='decimal/decimal.js'></script>
+    <script src='bignumber.js/bignumber.js'></script>
 
     <script src='javascripts/jquery-3.6.0.js'></script>
     <script src="d3/d3.js"></script>
