--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -26,7 +26,7 @@
     <script src="noUiSlider-15.6.1/dist/nouislider.js"></script>
     <script src="wnumb-1.2.0/wNumb.js"></script>
 
-    <script src='decimal/decimal.js'></script>
+    <!-- <script src='decimal/decimal.js'></script> -->
     <script src='bignumber.js/bignumber.js'></script>
 
     <script src='javascripts/jquery-3.6.0.js'></script>
@@ -37,6 +37,9 @@
     <script src="https://cdn.rawgit.com/hayeswise/Leaflet.PointInPolygon/v1.0.0/wise-leaflet-pip.js"></script>
     <link rel="stylesheet" href="markerClusterGroup/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="markerClusterGroup/dist/MarkerCluster.Default.css" />
+
+    <!-- ポリゴン描画 -->
+    <script src="turf_6.5.0/turf.min.js"></script>
 
     <!-- Select2 -->
     <script src="select2/dist/js/select2.min.js"></script>
