--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -132,7 +132,7 @@
             <button title="Map panel restoration" class="icon" id="restore"><img src="img/restore.png"></button> -->
 
             <button title="Reset of button status" class="iconPolygon2on" id="undo"><img src="img/reset.png"></button>
-            <button title="Vertex point addition" class="iconPolygon" id="point"><img src="img/marker.png"></button>
+            <button title="Select area with polygon" class="iconPolygon" id="point"><img src="img/marker.png"></button>
 
          
         </div>
