--- a/Mitosearch/views/ejs/index.ejs
+++ b/Mitosearch/views/ejs/index.ejs
@@ -81,7 +81,7 @@
     <header id="top-header">
         <img src="img/logoLarge.png" id="headlogo" style="height: auto; width: 10%;">
         <p id="headtitle">MitoSearch</p>
-        <p id="explain"><%= __('MainTitle') %></p>
+        <p id="explain"><%= __('MainTitle1') %><%= numFish %><%= __('MainTitle2') %></p>
         <ul id="nav">
             <li class="disabled"><a href="./"><%= __('Top') %></a></li>
             <li><a href="./about"><%= __('About') %></a></li>
