--- a/Mitosearch/views/ejs/about.ejs
+++ b/Mitosearch/views/ejs/about.ejs
@@ -41,7 +41,7 @@
 
     <main>
         <div class="about-main">
-            <p><%= __('MainTitle') %></p>
+            <p><%= __('MainTitle1') %><%= numFish %><%= __('MainTitle2') %></p>
             
             <h1><%= __('headline') %></h1>
 
